--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springbootRestweb
 spring.datasource.username=root
 spring.datasource.password=Art.ran@#111
 
-
+server.port=8082
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
